# Sparsity_reduction

./: CMakeLists.txt  README.md
TestData/: D.fa  Output.fa  data.fa  output.fa
src/: Sparsity_reduction_header.cpp  Sparsity_reduction_header.h  class_SR.cpp  class_SR.h  main.cpp
